<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="1dp"
    app:cardElevation="3dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/productIconIv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_add_shopping_green" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/nextIv"
            android:layout_toEndOf="@id/productIconIv"
            android:orientation="vertical">

            <TextView
                android:id="@+id/marketPriceNoteTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/shape_rect05"
                android:padding="5dp"
                android:text="@string/default_45"
                android:textColor="@color/green"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/titletv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/title1"
                android:textColor="#386109"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descriptionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titletv"
                android:maxLines="2"
                android:minLines="2"
                android:text="@string/prod_decrip1"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addToCartTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/descriptionTv"
                android:drawableStart="@drawable/ic_baseline_add_primary"
                android:text="@string/add_to_cart1"
                android:textColor="#386109"
                android:textStyle="bold" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addToCartTv"
                android:layout_alignParentEnd="true"
                android:padding="5dp">

                <TextView
                    android:id="@+id/originalPriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_20"
                    android:textColor="@color/black" />

            </RelativeLayout>
        </RelativeLayout>

        <ImageView
            android:id="@+id/nextIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_navigate_next_bkack"
            android:layout_marginEnd="5dp"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>