<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="1dp"
    app:cardElevation="3dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/shopIv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_store_black" />

        <ImageView
            android:id="@+id/onlineIv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/shape_circle03"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/nextIv"
            android:layout_toEndOf="@+id/shopIv"
            android:orientation="vertical">

            <TextView
                android:id="@+id/farmnametv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:text="@string/farm_name1"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phonetv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/phone1"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/addresstv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/address1"
                android:textColor="@color/black" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:numStars="5"
                android:rating="3.5"
                android:progressTint="@color/lawngreen"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/nextIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_navigate_next_bkack"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>